k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: website-service
spec:
  type: LoadBalancer
  selector:
    app: website
  ports:
    - port: 80
      targetPort: 80
